// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileThresholdField expect to handle ThresholdChange 1`] = `
Object {
  "threshold": 100,
  "validThreshold": true,
}
`;

exports[`ProfileThresholdField expect to handle ThresholdChange 2`] = `
Object {
  "threshold": 50,
  "validThreshold": true,
}
`;

exports[`ProfileThresholdField expect to handle ThresholdChange 3`] = `
Object {
  "threshold": -10,
  "validThreshold": false,
}
`;

exports[`ProfileThresholdField expect to render without error 1`] = `
<Fragment>
  <FormGroup
    fieldId="policy-threshold"
    helperText="A value of 95% or higher is recommended"
    helperTextInvalid="Threshold has to be a number between 0 and 100"
    label="Compliance threshold (%)"
    labelIcon={<PolicyThresholdTooltip />}
    validated="default"
  >
    <Field
      aria-label="compliance threshold"
      component={[Function]}
      defaultValue={10}
      id="complianceThreshold"
      isRequired={true}
      name="complianceThreshold"
      onChange={[Function]}
      style={
        Object {
          "display": "block",
          "width": "60%",
        }
      }
      type="number"
      validated="default"
    />
  </FormGroup>
</Fragment>
`;
